<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:backgroundTint="#121212"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Registrar" />

        <EditText
            android:id="@+id/txt_nombre"
            style="@style/modifiedEditText"
            android:layout_margin="@dimen/loginViewsMargin"
            android:hint="@string/login_name_hint"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/txt_usuarior"
            style="@style/modifiedEditText"
            android:layout_margin="@dimen/loginViewsMargin"
            android:hint="@string/login_email_hint"
            android:inputType="text"
            android:maxLines="1" />


        <EditText
            android:id="@+id/txt_passwordr"
            style="@style/modifiedEditText"
            android:layout_margin="@dimen/loginViewsMargin"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />


        <Button
            android:id="@+id/btn_loginr"
            style="@style/loginButton"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Signup" />

        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:clickable="true"
            android:onClick="RegresarLogin"
            android:text="@string/signup_login_hint"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>